# Ollama-local-RAG

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
src/: __init__.py  model.py  retrieval.py  vector_store.py
