[project]
name = "ollama-local-rag"
version = "0.1.0"
description = "Pizza review RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.5",
    "langchain-qdrant>=0.2.0",
    "pandas>=2.3.1",
    "qdrant-client>=1.15.0",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.47.0",
]
